Removing i18n vars and fix the broken styles

--- a/source/stylesheets/archive.css.sass
+++ b/source/stylesheets/archive.css.sass
@@ -6,7 +6,8 @@
   padding: 40px 0
   margin-top: -280px
   .archive-block
-    float: left
+    float: none
+    display: inline-grid
   .archive-header
     position: relative
     right: 20px
